<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/tv_num1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_num2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_num1" />

    <EditText
        android:id="@+id/et_n1"
        android:layout_width="211dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/number1"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/et_n1"
        app:layout_constraintBottom_toTopOf="@+id/et_n2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/et_n2"
        android:layout_width="213dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Number2"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/et_n2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_num2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_num2"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="277dp"
        android:layout_height="80dp"
        android:layout_marginTop="116dp"
        android:gravity="center"
        android:text="@string/tv_answer"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_n2" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="97dp"
        android:layout_height="61dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="68dp"
        android:onClick="add"
        android:text="@string/btn_add"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer" />

    <Button
        android:id="@+id/btn_subtract"
        android:layout_width="97dp"
        android:layout_height="61dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:onClick="subtract"
        android:text="@string/btn_subtract"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_add"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="97dp"
        android:layout_height="61dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="44dp"
        android:onClick="multiply"
        android:text="@string/btn_multiply"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="97dp"
        android:layout_height="61dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:onClick="divide"
        android:text="@string/btn_divide"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_multiply"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>